# obsdn-rust-sdk

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: architecture.md  integration-testing.md
examples/: book_with_resync.rs  cancel_order.rs  market_maker.rs  place_order.rs  transfer.rs  withdraw.rs  ws_book.rs  ws_private_orders.rs
scripts/: capture_eip712_fixtures.go
scripts/codegen-rust/: Cargo.toml
scripts/codegen-rust/src/: main.rs
src/: auth.rs  builder.rs  env.rs  error.rs  lib.rs  market_cache.rs
src/rest/: account.rs  asset.rs  auth.rs  auth_api.rs  auth_layer.rs  chain.rs  general.rs  markets.rs  mod.rs  orders.rs  portfolio.rs  price.rs  query.rs  subaccount.rs  vault.rs
src/sign/: domain.rs  mod.rs  order.rs  register.rs  scale.rs  subaccount.rs  transfer.rs  vault.rs  withdraw.rs
src/types/: mod.rs
src/ws/: auth.rs  channel.rs  connection.rs  event.rs  frame.rs  gsn.rs  managed.rs  mod.rs  views.rs
tests/: api_names.rs  builder_unit.rs  codegen_smoke.rs  e2e_staging.rs  eip712_golden.rs  error_mapping.rs  integration_smoke.rs  integration_staging.rs  place_limit_unit.rs  rest_phase3_smoke.rs  rest_smoke.rs  sign_helpers_unit.rs  staging_smoke.rs  staging_ws.rs  transfer_withdraw_unit.rs  types_market_unit.rs  ws_chaos.rs  ws_smoke.rs  ws_views_unit.rs
tests/fixtures/eip712/: create_subaccount.json  create_vault.json  order.json  register_child_account_signer.json  register_signed_by_sender.json  register_signed_by_signer.json  stake_vault.json  transfer.json  unstake_vault.json  withdraw.json
tests/fixtures/json/: order.json  place_order_request.json
