[package]
name = "obsdn-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the OBSDN perpetual exchange"
authors = ["OBSDN Engineering <dev@obsdn.trade>"]
license = "MIT"
repository = "https://github.com/obsdn-trade/obsdn-rust-sdk"
homepage = "https://obsdn.trade"
documentation = "https://docs.rs/obsdn-sdk"
readme = "README.md"
keywords = ["trading", "exchange", "perpetuals", "crypto", "websocket"]
categories = [
    "api-bindings",
    "asynchronous",
    "cryptography::cryptocurrencies",
    "finance",
    "web-programming::http-client",
]
publish = false
# MSRV: pinned to current stable. Several transitive crates (getrandom,
# time-core, etc.) require Cargo's edition2024 feature, stabilized in 1.85.
# We pin higher to use the toolchain we actually test against.
rust-version = "1.95"
# Keep the published tarball lean: the codegen sub-crate, rendered docs, and
# CI config are build/dev tooling, not needed by downstream users.
exclude = ["scripts/", "docs/", ".github/"]

# docs.rs builds with all features and sets `--cfg docsrs` so feature-gated
# items can be annotated with `#[doc(cfg(...))]` as the feature surface grows.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
prost = "0.13"
pbjson = "0.7"
pbjson-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"

# REST + HMAC layer. rustls-only, no openssl. gzip for compressed responses.
# Response::json is convenient for unauthenticated paths; signed requests
# hand-roll the body bytes before hashing.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "http2"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
url = "2"
percent-encoding = "2"
bytes = "1"
zeroize = { version = "1", features = ["derive"] }

# EIP-712 signing. alloy-sol-types generates the ABI-encoded struct hash from
# Solidity-style `sol!` declarations, producing the struct hash the gateway
# verifies. alloy-signer-local provides the secp256k1 signing path (k256 under
# the hood). Individual sub-crate pins keep the dep surface narrow vs. the
# umbrella `alloy` crate.
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
hex = "0.4"

# WebSocket client. rustls-tls-native-roots matches the rest of the crate
# (no openssl). Defaults off to avoid pulling native-tls; `connect` re-enables
# `connect_async` which is otherwise gated.
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
# wiremock provides an in-process HTTP mock to assert header/body shape.
wiremock = "0.6"
# Example deps: kept minimal so `cargo build --examples` stays fast.
anyhow = "1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
